--- a/index.html
+++ b/index.html
@@ -16,14 +16,13 @@
             <p>To shoot, press <code>Space </code></p>
             </div>
         <div class="gameover container">
-                <p>You loose</p>
-                <button id = "goBtn">Restart the game</button>
+            <p>You loose</p>
+            <button>Restart the game</button>
         </div>
         <div class="win container">
             <p>You Win</p>
-            <button id = "wnBtn">Restart the game </button>
+            <button>Restart the game </button>
     </div>
     <script src="js.js"></script>
 </body>
-
 </html>
